# perceptron

./: README.md  pyproject.toml
src/perceptron/: perceptron.py
